--- a/index.html
+++ b/index.html
@@ -98,7 +98,42 @@
             </button>
           </div>
     </div>
-    <div id="content1"></div>
+    <div id="content1">
+      <div id="cont1"></div>
+      <div id="cont2">
+        <div><img  class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713244896/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Testing/Hybrid%20Homepage/16th%20April/neu_offers1_ao2uss.png?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></div>
+        <div><img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713849331/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Sanity/other/April/23042024/HP_TNRL_22April2024_ekmdao.jpg?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></div>
+      </div>
+      <div id="cont3" class="cont">
+        <h3><stong>Exciting Bank Offers For You</stong></h3>
+        <div>
+          <div><img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714655578/Croma%20Assets/CMS/LP%20Page%20Banners/2024/More%20For%20Your%20Money/April/BAU/Homepage%20New%20Layout/BAU/2%20split/BrandxBank/Revised/02052024/HP_2Split_MFYMP_Brands_HDFC_ICICI_2May2024_mltbxp.png?tr=w-720" alt="bankdetailsimage"/></div>
+          <div><img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714655578/Croma%20Assets/CMS/LP%20Page%20Banners/2024/More%20For%20Your%20Money/April/BAU/Homepage%20New%20Layout/BAU/2%20split/BrandxBank/Revised/02052024/HP_2Split_MFYMP_ICICI_2May2024_rbdxmo.png?tr=w-720" alt="bankdetailsimage"/></div>
+        </div>
+      </div>
+      <div id="cont4" class="cont">
+        <h3><strong>Our New Favourites</strong></h3>
+        <div>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714225806/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Our%20new%20Favourite/April/27042024/HP_NewatCroma_SummerCampaign_26April24_mbhmbi.png?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714668564/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Our%20new%20Favourite/May/02052024/HP_NewatCroma_TWS_2May24_jweshj.png?tr=w-1024" alt="productdeals"/>
+        </div>
+      </div>
+      <div id="cont5">
+        <h3><strong>What’s Hot</strong></h3>
+        <div>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714650641/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Whats%20Hot/May/HP_New-at-Croma_OneplusTWS_2May2024_e83gab.png?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714714072/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Sanity/HP/May/03052024/HP_New-at-Croma_TV_3May2024_mbmayp.png?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714714071/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Sanity/HP/May/03052024/HP_New-at-Croma_Coolers_3May2024_pysxw7.png?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714714073/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Sanity/HP/May/03052024/HP_New-at-Croma_WM_3May2024_mg7l98.png?tr=w-1024" alt="productdeals"/>
+        </div>
+      </div>
+      <div id="cont6">
+        <h3><strong>No More Worrying About Your Appliances</strong></h3>
+        <div>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1711007199/Croma%20Assets/CMS/LP%20Page%20Banners/2024/E-Star%20Test/21st%20March/desk_zipcare2_yrtwo0.png?tr=w-1024" alt="image"/>
+        </div>
+      </div>
+    </div>
     <div id="middleslider">
         <div id="carouselExampleIndicators1" class="carousel slide carousel-fade">
          
@@ -222,6 +257,7 @@
          <br><br>
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
