--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </button>
           </div>
     </div>
-    <div id="content1">
+    <div id="content1" class="content">
       <div id="cont1"></div>
       <div id="cont2">
         <div><img  class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713244896/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Testing/Hybrid%20Homepage/16th%20April/neu_offers1_ao2uss.png?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></div>
@@ -168,7 +168,31 @@
           </div>
         
     </div>
-    <div id="content2"></div>
+    <div id="content2" class="content">
+      <div id="box1">
+        <h3><strong>Deals Of The Day</strong></h3>
+        <div>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714728000/Croma%20Assets/CMS/LP%20Page%20Banners/2024/DOTD/May/03052024/HP_DOTD_Laptop_03May2024_k7ktzk.jpg?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714641315/Croma%20Assets/CMS/LP%20Page%20Banners/2024/DOTD/May/03052024/Desktop/HP_DOTD_WhirlpoolWM_03May2024_q1d5fo.jpg?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714726968/Croma%20Assets/CMS/LP%20Page%20Banners/2024/DOTD/May/03052024/HP_DOTD_Watch_03May2024_nkrd6h.jpg?tr=w-1024" alt="productdeals"/>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1714641310/Croma%20Assets/CMS/LP%20Page%20Banners/2024/DOTD/May/03052024/Desktop/HP_DOTD_CromaMW_03May2024_fj1cph.jpg?tr=w-1024" alt="productdeals"/>
+        </div>
+      </div>
+      <div id="box2">
+        <h3><strong>Experience Croma On Tata Neu!</strong></h3>
+        <div>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713377573/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Testing/Hybrid%20Homepage/HP_Neubanner_18April24.png_h4axzq.png?tr=w-1024" alt="image"/>
+        </div>
+      </div>
+      <div id="con"></div>
+      <div id="con"></div>
+      <div id="box5">
+        <h3><strong>Why Croma?</strong></h3>
+        <div>
+          <img class="image" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1710743309/Croma%20Assets/CMS/Testing/2024/March/18th/Why%20Croma/Desktop/JPG/Why-Croma_t2lgxr.png?tr=w-1024" alt="image"/>
+        </div>
+      </div>
+    </div>
     <div id="footer">
         <div id="footer1">
            <p><strong>CONNECT WITH US</strong></p> 
