Project is  updated

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
         </div>
       <!-- </div> -->
       <div id="cont2">
-        <div><a class="attribute" target="_blank"  ></a>
-          <img  class="image4" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713244896/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Testing/Hybrid%20Homepage/16th%20April/neu_offers1_ao2uss.png?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></div>
-        <div><img class="image4" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713849331/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Sanity/other/April/23042024/HP_TNRL_22April2024_ekmdao.jpg?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></div>
+        <div><a class="attribute" target="_blank" href="https://www.croma.com/lp-bank-offers" > <img  class="image4" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713244896/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Testing/Hybrid%20Homepage/16th%20April/neu_offers1_ao2uss.png?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></a></div>
+        
+         <div><a class="attribute" target="_blank" href="https://www.croma.com/lp-bank-offers" ><img class="image4" src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1713849331/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Sanity/other/April/23042024/HP_TNRL_22April2024_ekmdao.jpg?tr=w-1024" style=" width:100% ;" alt="dealsimage"/></a></div>
       </div>
       <div id="cont3" class="cont">
         <h3><stong>Exciting Bank Offers For You</stong></h3><br>
